k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout 
metadata:
  labels:
    app: rollout-demo
  name: rollout-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollout-demo
  strategy:
    blueGreen:
      activeService: rollout-demo-stable
      previewService: rollout-demo-preview
      autoPromotionEnabled: false
      prePromotionAnalysis:
        templates:
        - templateName: rollout-check
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rollout-demo
    spec:
      containers:
      - image: xinhuagu/argo-rollout-demo:0.0.13
        name: rollout-demo
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 100Mi
            cpu: 50m
status: {}
