k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rollout-demo
  name: rollout-demo-stable
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rollout-demo
  type: ClusterIP
status:
  loadBalancer: {}
